--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
 /* Здесь вы напишете основную часть стилей страницы.
 
-Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
+Будьте внимательны! Для корректной работы скриптов на этом сайте нужно,
+чтобы в HTML некоторые классы были названы особым образом:
 ✦ like-icon — для svg-иконки анимированного сердца
 ✦ card__like-button — для кнопки Like рядом с иконкой
-✦ card__icon-button — для кнопки, оборачивающей иконку
 ✦ card__icon-button — для кнопки, оборачивающей иконку
 ✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
 ✦ button__text — для обозначения текстового элемента внутри кнопки
@@ -11,6 +11,366 @@
 */
 
 .page {
-  min-inline-size: 320px;
+  margin: 0 auto;
+  color: var(--mainColor, #000);
+  font-family: var(--main-font, sans-serif);
+  background-image: var(--page-background-image);
+  background-size: cover;
+  background-attachment: fixed;
+  min-inline-size: var(--min-inline-size, 375px);
+  max-inline-size: var(--max-inline-size, 1440px);
   min-block-size: 100dvb;
+}
+
+.rectangle {
+  margin: 0 auto;
+  border: 2px solid currentColor;
+  background-color: var(--background, #fff);
+  inline-size: clamp(
+    var(--min-inline-size, 375px),
+    100%,
+    var(--max-inline-size-block, 700px)
+  );
+}
+
+/* Header */
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-block: 100px !important;
+  padding-block: clamp(7.5rem, 6.9231rem + 2.4615vw, 8rem);
+  font-family: var(--accent-font, sans-serif);
+  text-transform: uppercase;
+}
+
+.header__logo {
+  margin-block-end: 20px;
+  font-size: clamp(3.0625rem, 1.9087rem + 4.9231vw, 4.0625rem);
+}
+
+.header__title {
+  font-size: clamp(0.875rem, 0.226rem + 2.7692vw, 1.4375rem);
+}
+
+/* Content */
+.content {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 50px;
+  font-size: var(--font-size-md, 18px);
+}
+
+.card__watermark {
+  position: absolute;
+  opacity: 0.5;
+  font-family: var(--accent-font, sans-serif);
+  font-size: var(--font-size-sm, 14px);
+  text-transform: uppercase;
+  inset-block-start: 25px;
+  inset-inline-end: clamp(0.8125rem, -0.0529rem + 3.6923vw, 1.5625rem);
+  mix-blend-mode: hard-light;
+  -webkit-text-stroke: 1px var(--text-stroke, #fff);
+}
+
+.card__title {
+  padding-inline-start: 10px;
+  padding-inline-end: 40px;
+  padding-block: 5px;
+}
+
+.card__image {
+  position: relative;
+  margin-inline: -2px;
+  border: 2px solid currentColor;
+  overflow: hidden;
+  aspect-ratio: 1 / 1;
+
+  img {
+    inline-size: 100%;
+  }
+}
+
+.card__content {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+  padding-inline: 25px;
+  padding-block-start: 20px;
+  padding-block-end: 25px;
+  line-height: 1.16;
+}
+
+.card__footer {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0 25px 25px;
+}
+
+/* Buttons */
+.card__icon-button {
+  border: none;
+  border: 2px solid transparent;
+  padding: 0;
+  background-color: transparent;
+  transition: border 0.3s ease;
+  cursor: pointer;
+  appearance: none;
+  block-size: 38px;
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus-visible {
+    border-color: currentColor;
+    outline: none;
+  }
+}
+
+.card__like-button {
+  inline-size: 130px;
+}
+
+.card__button-view {
+  position: relative;
+  border: 2px solid currentColor;
+  overflow: hidden;
+  font-family: var(--accent-font, sans-serif);
+  font-size: var(--font-size-sm, 14px);
+  background-color: var(--white, #fff);
+  cursor: pointer;
+  appearance: none;
+  block-size: 38px;
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus-visible {
+    box-shadow: 2px 2px 0 0 currentColor;
+    outline: none;
+    transition: box-shadow 0.3s ease;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-color: currentColor;
+    transition: translate 0.5s ease-in-out;
+    translate: -100%;
+  }
+
+  &:is(:hover)::before {
+    translate: 0;
+  }
+
+  .button__text,
+  svg {
+    position: relative;
+    color: var(--white, #fff);
+    mix-blend-mode: difference;
+  }
+}
+
+.button-open-dialog {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+  margin-block-end: 50px;
+  inline-size: clamp(19.125rem, 17.0337rem + 8.9231vw, 20.9375rem);
+  block-size: 57px;
+
+  @media (width <= 375px) {
+    flex-direction: column;
+    justify-content: center;
+    block-size: 84px;
+
+    svg {
+      inline-size: 28px;
+    }
+  }
+
+  svg {
+    inline-size: 20px;
+  }
+}
+
+/* Like Icon Animation */
+.like-icon {
+  .main-body,
+  .core {
+    fill: transparent;
+    transition: fill 0.3s;
+  }
+
+  &.is-liked {
+    .core {
+      fill: var(--red, #ff0000);
+    }
+
+    .main-body {
+      fill: var(--red, #ff0000);
+      transition-delay: 0.05s;
+    }
+
+    .contour {
+      fill: var(--red, #ff0000);
+      transition: fill 0.3s;
+      transition-delay: 0.06s;
+    }
+
+    .heart {
+      animation: scale 0.3s ease-in 0.1s;
+      transform-origin: center;
+    }
+
+    .sparks {
+      animation: opacity 0.3s ease-in 0.3s;
+    }
+  }
+
+  .main-body {
+    transition-delay: 0;
+  }
+
+  .core {
+    transition-delay: 0.03s;
+  }
+
+  &:not(.is-liked) {
+    .contour {
+      transition: fill 0.1s linear;
+    }
+
+    &:hover {
+      .core {
+        fill: var(--black, #000);
+      }
+
+      .main-body {
+        fill: var(--black, #000);
+        transition-delay: 0.05s;
+      }
+    }
+
+    &:active {
+      .core {
+        fill: var(--red, #ff0000);
+      }
+
+      .main-body {
+        fill: var(--red, #ff0000);
+        transition-delay: 0.05s;
+      }
+    }
+  }
+
+  .sparks {
+    opacity: 0;
+  }
+}
+
+@keyframes scale {
+  0% {
+    scale: 1;
+  }
+  100% {
+    scale: 1.25;
+  }
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+/* Dialog */
+.dialog {
+  border: 2px solid currentColor;
+  padding: 30px;
+  font-family: var(--accent-font, sans-serif);
+  font-size: var(--font-size-sm, 14px);
+  text-transform: uppercase;
+  background-color: var(--background, #fff);
+  inline-size: clamp(21.3125rem, 20.4471rem + 3.6923vw, 22.0625rem);
+
+  @media (width <= 375px) {
+    padding: 30px 40px;
+  }
+}
+
+.dialog[open] {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  place-items: center flex-start;
+  gap: 30px 17px;
+  line-height: 1.5;
+
+  .button-close-dialog {
+    grid-column: 1 / -1;
+    text-transform: uppercase;
+    inline-size: clamp(16.0625rem, 13.4663rem + 11.0769vw, 18.3125rem);
+  }
+
+  &::backdrop {
+    background-color: rgba(0, 0, 0, 0.75);
+  }
+}
+
+/* Filters */
+.filter-brightness {
+  filter: brightness(200%);
+}
+
+.filter-contrast {
+  filter: contrast(20%);
+}
+
+.filter-blur {
+  filter: blur(3.2rem);
+}
+
+.filter-opacity {
+  filter: opacity(0.8);
+}
+
+.filter-grayscale {
+  filter: grayscale(0.8);
+}
+
+.filter-saturate {
+  filter: saturate(158%);
+}
+
+.filter-hue-rotate {
+  filter: hue-rotate(-90deg);
+}
+
+.filter-sepia-invert-drop-shadow {
+  filter: sepia(80%) invert(0.7) drop-shadow(5px 15px 3px rgba(0, 0, 0, 0.8));
+}
+
+/* Поддержка дополнительных свойств */
+@supports (text-stroke: 1px var(--text-stroke, #fff)) {
+  .card__watermark {
+    text-stroke: 1px var(--text-stroke, #fff);
+  }
+}
+
+@supports (font-variation-settings: normal) {
+  .page {
+    font-variation-settings: 'wght' var(--wght-text, 400);
+  }
+
+  .card__title {
+    font-variation-settings: 'wght' var(--wght-heading, 700);
+  }
 }
