--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,8 +2,7 @@
 
 @font-face {
   font-family: 'PressStart2P';
-  src: local('PressStart2P'),
-    url('../fonts/PressStart2P-Regular.woff') format('woff');
+  src: local('PressStart2P'), url('PressStart2P-Regular.woff') format('woff');
   font-weight: 400;
   font-display: swap;
 }
@@ -11,8 +10,8 @@
 @font-face {
   font-family: 'Inter';
   src: local('Inter'),
-    url('../fonts/Inter-Variable.woff2') format('woff2 supports variations'),
-    url('../fonts/Inter-Variable.woff2') format('woff2-variations');
+    url('Inter-Variable.woff2') format('woff2 supports variations'),
+    url('Inter-Variable.woff2') format('woff2-variations');
   font-weight: 400 785;
   font-display: swap;
 }
