--- a/styles/variables.css
+++ b/styles/variables.css
@@ -18,9 +18,9 @@
   --font-size-sm: 14px;
   --page-background-image: repeating-linear-gradient(
       90deg,
-      #d3d3d3 2px,
-      transparent 4px
+      #d3d3d3 0 2px,
+      transparent 2px 4px
     ),
-    repeating-linear-gradient(180deg, #d3d3d3 2px, transparent 4px),
+    repeating-linear-gradient(180deg, #d3d3d3 0 2px, transparent 2px 4px),
     linear-gradient(180deg, #e7e7e7 0.01%, #1a1a1a 100%);
 }
